--- a/abid__css/abid__mainCss.css
+++ b/abid__css/abid__mainCss.css
@@ -103,7 +103,7 @@ header {
     background-position-x: 0%;
     background-position-y: 0%;
     background-repeat: repeat;
-    background-image: url("/abid__imgS/abid__dnLogo.jpg");
+    background-image: url("../abid__imgS/abid__dnLogo.jpg");
     background-size: 249px;
 
     background-position: left;
